Overflow / scroll issue on ios devices fixed (#27)

--- a/src/Resources/public/styles/cookiebar_default.scss
+++ b/src/Resources/public/styles/cookiebar_default.scss
@@ -28,7 +28,6 @@ $cookiebar-animation-duration: .5s;
     border: 1px solid #d0d0d0;
     border-radius: 5px;
     margin-bottom: 10px;
-    overflow: hidden;
 
     > label{
       margin: 5px 130px 5px 10px;
