--- a/src/Resources/public/styles/cookiebar_simple.scss
+++ b/src/Resources/public/styles/cookiebar_simple.scss
@@ -32,7 +32,6 @@ $cookiebar-animation-duration: .5s;
       border: 1px solid #d0d0d0;
       border-radius: 5px;
       margin-bottom: 10px;
-      overflow: hidden;
       text-align: left;
 
       > label{
